# podpilot

./: .editorconfig  .gitignore  LICENSE  README.md  channel_fetcher.py  chroma_search.py  commands.txt  conversational_agent.py  download_audio.py  embeddings.py  extract_duration.py  find_podcasts.py  generate_lesson.py  learning_agent.py  lesson_search.py  llm_config.py  llm_providers.py  local_whisper_transcribe.py  mp3_transcoder.py  podcasts.json  process_lessons.py  pyproject.toml  requirements.txt  semantic_search_example.py  temp.py  test_embeddings.py  transcribe.py  transcription_chunks.py  update_durations.py  yuyu-temp.json  yuyu.json
adapters/: __init__.py  base.py  example_english.py  japanese.py
adapters/prompts/en/: system_prompt.md  user_prompt_template.md
adapters/prompts/ja/: system_prompt.md  user_prompt_template.md
config/: README.md  podcasts.json  podcasts.json.example
docs/: ADAPTERS.md  CONVERSATIONAL_AGENT.md  LEARNING_AGENT.md  RAG_ARCHITECTURE.md  README.md  SEMANTIC_SEARCH_GUIDE.md  TEST_COVERAGE.md
scripts/: run_tests.sh
tests/: test_adapters_base.py  test_adapters_japanese.py  test_channel_fetcher.py  test_download_audio.py  test_find_podcasts.py  test_generate_lesson.py  test_generate_lesson_cli.py  test_generate_lesson_parallel.py  test_llm_providers.py  test_local_whisper_transcribe.py  test_mp3_transcoder.py  test_podcast_downloader.py  test_process_lessons.py  test_transcribe.py  test_update_durations.py  test_update_durations_cli.py
